fix cli